tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax12/Test.java


public class Test {
	interface A {
		abstract strictfp void m() { 
			
		} 
	}
}